css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.fa-solid, .fa-regular {
    color: var(--main-color);
}

body {
    display: flex;
    justify-content: center;
}

#main-container {
    width: 100%;
    padding: 0 50px;
    box-sizing: border-box;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.dollar {
    font-weight: 700;
}

.fa-regular.fa-star {
    color: var(--main-bg-color)
}

/****** Accommodation And Popular ***********/
.accommodation-and-popular {
    display: flex;
    justify-content: space-between;
}

.accommodation-and-popular section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** Accommodation ***********/
.accommodation {
    width: 65%;
}

.accommodation-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.accommodation-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.accommodation-cards .card {
    display: flex;
    flex-direction: column;
    margin-top: 33px;
    width: 30%;
}

.accommodation-cards img {
    width: 100%;
    height: 146px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.accommodation-cards .card-content {
    width: 67%;
    padding-left: 10px;
    padding-top: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
    gap: 5px;
}

.accommodation-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.accommodation-cards .card-subtitle {
    margin: 0;
}

.accommodation-cards .card-txt {
    display: flex;
    flex-direction: column;
    gap: 3px;
}

.accommodation-cards  .card-rating {
    margin-bottom: 5px;
}

.more-accommodations {
    margin-top: 30px;
}

/****** Popular ***********/
.popular {
    width: 32%;
}

.popular-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.popular-cards .card {
    display: flex;
    margin-top: 33px;
}

.popular-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.popular-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.popular-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.popular-cards .card-subtitle {
    margin: 0;
}

.popular-cards .card-rating {
    margin-bottom: 5px;
}



/* **** Things to Do ******* */
.things-to-do {
    margin-top: 30px;
    margin-bottom: 80px;
}

.things-to-do .things-to-do-title {
    padding-left: 1%;
}

.places-to-visit-cards {
    display: flex;
    justify-content: center;
    gap: 20px;
}

.places-to-visit-cards .card {
    display: flex;
    flex-direction: column;
    margin-top: 33px;
}

.places-to-visit-cards .fill-card {
    padding: 0;
}

.places-to-visit-cards img {
    height: 500px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    max-width: 100%;
}

.places-to-visit-cards .card-content {
    display: flex;
    justify-content: center;
    box-sizing: border-box;
    padding-top: 20px;
    padding-bottom: 20px;
}

.places-to-visit-cards .card .image-wrapper {
    max-width: 400px;
}

/****** Header *************/
.header-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.booki-logo {
    padding: 20px 20px 20px 0px;
    margin: 20px 20px 20px 0px;
}

.booki-logo img {
    height: 20px;
    width: 60px;
}

.header-container ul {
    display: flex;
    flex-direction: row;
    list-style: none;
    gap: 40px;
}

.nav-link {
    padding-top: 20px;
}

.nav-link a:hover {
    padding-top: 20px;
    border-top: 2px solid var( --main-color);
    color:  var( --main-color);
}

h2 {
    margin: 0px;
}

header h2 {
    margin-bottom: 0px;
}

header p {
    margin-bottom: 20px;
}

/***** Search Form *******/
.search-form {
    margin-top: 40px;
    margin-bottom: 40px;
}

.form-container {
    width: 350px;
    height: 45px;
    margin: 0px 0px 30px 0px;
    display: flex;
}

.input-and-button {
    display: flex;
}

.input {
    height: 50px;
    width: 180px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    font-weight: bold;
    font-size: 1.20em;
    padding-left: 30px;
}

.button {
    height: 45px;
    margin: 0px;
    height: 115%;
    width: 100px;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    background-color: var( --main-color);
    color: white;
    cursor: pointer;
    border: none;
}

.button-text {
    display: inline;
}

.button-icon {
    display: none;
}

.location-icon {
    height: 120%;
    background-color: #F2F2F2;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
}

.location-icon i {
    margin: 25px 20px 0px 20px;
    color: black;
}

/***** Filters ******/
.filters {
    padding-bottom: 80px;
    padding-bottom: 40px;
}

.filters nav {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    gap: 20px;
    height: 100%;
}

.filters-cards {
    display: flex;
    justify-content: space-between;
    gap: 40px;
    max-height: 100px;
}

.filters-cards .icon {
    width: 30px;
    height: 30px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.filters-cards .card {
    display: flex;
    border: 2px solid #D9D9D9;
    gap: 6px;
    padding: 10px 15px;
    border-radius: 30px;
    cursor: pointer;
}

.filter-card-title {
    flex-direction: column;
    align-self: center;
}

.filters-cards .card:hover {
    background-color: #DEEBFF;
}

.filters-header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 1.1em;
}

/** accomoadation info ****/
.accommodations-info {
    display: flex;
    justify-content: flex-start;
    gap: 10px;
    font-size: 1.1em;
    padding: 10px 10px 20px 0px;
}

.accommodations-info .info-icon {
    border: 2px solid #D9D9D9;
    align-self: center;
    height: 20px;
    padding: 3px 12px 7px 12px;
    border-radius: 50%;
}

/****** Footer ************/
footer {
    background-color: var(--main-bg-color);
    padding: 30px;
}

.footer-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 50px;
}

ul.no-bullets {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

h3 {
    padding: 0px;
    margin: 1px;
}

li {
    padding: 0px;
    margin-top: 10px;
}

a:link, a:visited, a:active {
    text-decoration: none;
    color: black;
}

/** ipad **/
@media (width < 1024px) {
    .accommodation-and-popular {
        flex-direction: column;
        gap: 60px;
    }

    .accommodation {
        width: 100%;
    }

    .popular {
        width: 100%;
    }

    .popular-cards {
        display:flex;
        gap: 20px;
    }

   .popular-cards img {
        width: 80px;
    }

    .places-to-visit-cards img {
        height: 200px;
        width: 200px;
    }

    .places-to-visit-cards .card .image-wrapper {
        max-width:250px;
    }

    .places-to-visit-cards {
        gap: 20px;
    }

    .filters nav {
        display: block;
    }

    .filters .filters-header {
        margin-bottom: 10px;
    }

    .filters-cards {
        justify-content: flex-start;
        gap: 30px;
        flex-wrap: wrap;
        
    }
}

/** iphone */
@media screen and (max-width: 768px) and (min-width: 320px) {
   #main-container {
        padding: 0;
        margin: 0;
   }

   .header {
     padding-left: 30px;
     padding-right: 30px;  
   }

    .filters-cards {
        margin-top: 30px;
    
    }

   .popular {
      order: 1;
   }

    .accommodation-and-popular {
        flex-direction: column;
        gap: 10px;
    }

    .accommodation-and-popular section {
      border-radius: 0;
    }

    .popular-cards img {
        width: 25%;
    }

    .listings {
        order: 2;
   }

   .accommodation {
      order: 2;
      flex-direction: column;
   }

   .accommodation-and-popular .accommodation {
          background-color: white;
   }

   .popular-cards {
      flex-direction: column;
   }

   .accommodation-cards {
     display: flex;
     flex-direction: column;
   }

   .accommodation-cards .card {
    width: 100%;
}

   .places-to-visit-cards {
     flex-direction: column;
     width: 100%;
   }


   .places-to-visit-cards .card .image-wrapper {
     max-width: 700px;
     width: 700px;
   }

   .footer-container {
        grid-template-columns: 1fr;
   }

   /* **** Header *** */
   .header-container {
        flex-direction: column;
        align-items: center;
        padding-bottom: 0;
        margin-bottom: 0;
   }

   .booki-logo {
        align-self: center;
        padding: 20px;
        margin: 20px;
        padding-bottom: 0;
        margin-bottom: 0;
   }

   .header-container ul {
        display: flex;
        flex-direction: row;
        gap: 10px;
        width: 100%;
        padding: 0;
        padding: 0;
        justify-content: space-around;
   }

   .header-container ul li a {
     display: inline-block;
     width: 50vw;
     padding: 10px 0;
     text-align: center;
     background-color: transparent;
     transition: background-color 0.3s ease, color 0.3s ease;
     padding-bottom: 20px;
   }

   .header-container ul li a:hover,
   .header-container ul li a:focus {
     padding-top: 0;
     margin-top: 0;
     border-top: none;
     border-bottom: 2px solid var( --main-color);
     background-color:  white;
     color: var(--main-color);
   }

   header h2 {
        margin-top: 0;
    }

    .nav-link {
        padding: 10px 0;
    }

    .filters .filters-header {
        margin-bottom: 10px;
    }

    .filters nav {
        height: 200px;
    }


    /** search form **/
    .button-text {
        display: none;
    }

    .button-icon {
        display: inline;
        font-size: 1.2em;
        color: white;
    }

    .input-and-button {
        display: flex;
        align-items: center;
    }

    .button {
        width: 50px;
        padding: 0;
        border-top-left-radius: 15px;
        border-bottom-left-radius: 15px;
        transform: translateX(-10px);
        z-index: 1;
    }

    .input {
       border: 1px solid rgba(0, 0, 0, 0.1);
       border-right: none;
    }

    .location-icon {
        margin-top: -5px;
    }

    .things-to-do {
        padding: 0 30px 0 30px;
    }

    .places-to-visit-cards .image-wrapper {
       width: 100%;
       max-width: 100%;
    }

    .places-to-visit-cards img {
       width: 100%;
       max-width: 100%;
    }

}

